--- a/recipes/homemade-pizza.html
+++ b/recipes/homemade-pizza.html
@@ -7,6 +7,157 @@
   </head>
   <body>
     <h1>Easy Homemade Pizza</h1>
+    <img src="/images/homemadepizza.jpg" alt="Homemade Pizza" />
+    <p>
+      This is a great recipe when you don't want to wait for the dough to rise.
+      You just mix it and allow it to rest for 5 minutes and then it's ready to
+      go! It yields a soft, chewy crust.
+    </p>
+    <h2>Ingredients</h2>
+    <h3>For the pizza dough</h3>
+    <ul>
+      <li>1 1/2 cups (355 ml) warm water (105°F-115°F)</li>
+      <li>1 package (2 1/4 teaspoons) active dry yeast</li>
+      <li>3 3/4 cups (490g) bread flour</li>
+      <li>
+        2 tablespoons extra virgin olive oil (omit if cooking pizza in a
+        wood-fired pizza oven)
+      </li>
+      <li>2 teaspoons kosher salt</li>
+      <li>1 teaspoon sugar</li>
+    </ul>
+    <h3>For making the pizza and toppings</h3>
+    <ul>
+      <li>Extra virgin olive oil</li>
+      <li>Cornmeal (to help slide the pizza onto the pizza stone)</li>
+      <li>Tomato sauce (smooth or pureed)</li>
+      <li>Firm mozzarella cheese, grated</li>
+      <li>Fresh soft mozzarella cheese, separated into small clumps</li>
+      <li>Fontina cheese, grated</li>
+      <li>Parmesan cheese, grated</li>
+      <li>Feta cheese, crumbled</li>
+      <li>Mushrooms, very thinly sliced if raw, otherwise first sautéed</li>
+      <li>Bell peppers, stems and seeds removed, very thinly sliced</li>
+      <li>Italian pepperoncini, thinly sliced</li>
+      <li>Italian sausage, cooked ahead and crumbled</li>
+      <li>Sliced black olives</li>
+      <li>Chopped fresh basil</li>
+      <li>
+        Baby arugula, tossed in a little olive oil, added as pizza comes out of
+        the oven
+      </li>
+      <li>Pesto</li>
+      <li>Pepperoni, thinly sliced</li>
+      <li>Onions, thinly sliced raw or caramelized</li>
+      <li>Ham, thinly sliced</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>
+        Proof the yeast: Place the warm water in the large bowl of a heavy duty
+        stand mixer. Sprinkle the yeast over the warm water and let it sit for 5
+        minutes until the yeast is dissolved. After 5 minutes stir if the yeast
+        hasn't dissolved completely. The yeast should begin to foam or bloom,
+        indicating that the yeast is still active and alive. (Note that if you
+        are using "instant yeast" instead of "active yeast", no proofing is
+        required. Just add to the flour in the next step.)
+      </li>
+      <li>
+        Make and knead the pizza dough: Add the flour, salt, sugar, and olive
+        oil, and using the mixing paddle attachment, mix on low speed for a
+        minute. Then replace the mixing paddle with the dough hook attachment.
+        Knead the pizza dough on low to medium speed using the dough hook about
+        7 to 10 minutes. If you don't have a mixer, you can mix the ingredients
+        together and knead them by hand. The dough should be a little sticky or
+        tacky to the touch. If it's too wet, sprinkle in a little more flour.
+      </li>
+      <li>
+        Let the dough rise: Spread a thin layer of olive oil over the inside of
+        a large bowl. Place the pizza dough in the bowl and turn it around so
+        that it gets coated with the oil. At this point you can choose how long
+        you want the dough to ferment and rise. A slow fermentation (24 hours in
+        the fridge) will result in more complex flavors in the dough. A quick
+        fermentation (1 1/2 hours in a warm place) will allow the dough to rise
+        sufficiently to work with. Cover the dough with plastic wrap. For a
+        quick rise, place the dough in a warm place (75°F to 85°F) for 1 1/2
+        hours. For a medium rise, place the dough in a regular room temperature
+        place (your kitchen counter will do fine) for 8 hours. For a longer
+        rise, chill the dough in the refrigerator for 24 hours (no more than 48
+        hours). The longer the rise (to a point) the better the flavor the crust
+        will have.
+      </li>
+      <li>
+        Preheat the pizza stone (or pizza pan or baking sheet): Place a pizza
+        stone on a rack in the lower third of your oven. Preheat the oven to
+        475°F for at least 30 minutes, preferably an hour. If you don't have a
+        pizza stone, you can use a pizza pan or a thick baking sheet; you need
+        something that will not warp at high temperatures.
+      </li>
+      <li>
+        Divide the dough into 2 balls: Remove the plastic cover from the dough.
+        Dust your hands with flour and push the dough down so it deflates a bit.
+        Divide the dough in half. Form 2 round balls of dough. Place each in its
+        own bowl, cover with plastic, and let sit for 15 minutes (or up to 2
+        hours).
+      </li>
+      <li>
+        Prep the toppings: Prepare your desired toppings. Note that you are not
+        going to want to load up each pizza with a lot of toppings as the crust
+        will end up not crisp that way. About a third a cup each of tomato sauce
+        and cheese would be sufficient for one pizza. One to two mushrooms
+        thinly sliced will cover a pizza.
+      </li>
+      <li>
+        Flatten the dough ball, and stretch out into a round: Working one ball
+        of dough at a time, take one ball of dough and flatten it with your
+        hands on a lightly floured work surface. Starting at the center and
+        working outwards, use your fingertips to press the dough to 1/2-inch
+        thick. Turn and stretch the dough until it will not stretch further. Let
+        the dough relax 5 minutes and then continue to stretch it until it
+        reaches the desired diameter—10 to 12 inches. Treat the dough gently!
+        You can also hold up the edges of the dough with your fingers, letting
+        the dough hang and stretch, while working around the edges of the dough.
+        If a hole appears in your dough, place the dough on a floured surface
+        and push the dough back together to seal the hole. Use your palm to
+        flatten the edge of the dough where it is thicker. Pinch the edges if
+        you want to form a lip.
+      </li>
+      <li>
+        Brush the dough top with olive oil: Use your fingertips to press down
+        and make dents along the surface of the dough to prevent bubbling. Brush
+        the top of the dough with olive oil (to prevent it from getting soggy
+        from the toppings). Let rest another 10 to 15 minutes. Repeat with the
+        second ball of dough.
+      </li>
+      <li>
+        Sprinkle the pizza peel with cornmeal, put flattened dough on top:
+        Lightly sprinkle your pizza peel (or flat baking sheet) with cornmeal.
+        (The cornmeal will act as little ball bearings to help move the pizza
+        from the pizza peel into the oven.) Transfer one prepared flattened
+        dough to the pizza peel. If the dough has lost its shape in the
+        transfer, lightly shape it to the desired dimensions.
+      </li>
+      <li>
+        Spread with tomato sauce and sprinkle with toppings: Spoon on the tomato
+        sauce, sprinkle with cheese, and place your desired toppings on the
+        pizza. Be careful not to overload the pizza with too many toppings, or
+        your pizza will be soggy.
+      </li>
+      <li>
+        Slide pizza into the oven: Sprinkle some cornmeal on the baking stone in
+        the oven (watch your hands, the oven is hot!). Gently shake the peel to
+        see if the dough will easily slide; if not, gently lift up the edges of
+        the pizza and add a bit more cornmeal. Slide the pizza off the peel and
+        onto the baking stone in the oven.
+      </li>
+      <li>
+        Bake: Bake pizza in the 475°F oven, one at a time, until the crust is
+        browned and the cheese is golden, about 10 to 15 minutes. If you want,
+        toward the end of the cooking time, you can sprinkle on a little more
+        cheese.
+      </li>
+    </ol>
+
     <p>Return back: <a href="../index.html">Home</a></p>
   </body>
 </html>
