--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="./recipes/homemade-pizza.html">Homemade Pizza</a></li>
+      <li><a href="./recipes/berry-cake.html">Berry Cake</a></li>
+      <li>
+        <a href="./recipes/spicy-egg-and-cheese-muffin-melts.html"
+          >Spicy Egg and Cheese Muffin Melts</a
+        >
+      </li>
     </ul>
   </body>
 </html>
