fixed images for the recipe pages

--- a/recipes/berry-cake.html
+++ b/recipes/berry-cake.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Berry Cake</h1>
-    <img src="/images/berry-cake.jpg" alt="Berry Cake" />
+    <img src="../images/berry-cake.jpg" alt="Berry Cake" />
     <p>It is packed with berries and no mixer required.</p>
     <h2>Ingredients</h2>
     <ul>
