--- a/recipes/homemade-pizza.html
+++ b/recipes/homemade-pizza.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Easy Homemade Pizza</h1>
-    <img src="/images/homemadepizza.jpg" alt="Homemade Pizza" />
+    <img src="../images/homemadepizza.jpg" alt="Homemade Pizza" />
     <p>
       This is a great recipe when you don't want to wait for the dough to rise.
       You just mix it and allow it to rest for 5 minutes and then it's ready to
