--- a/recipes/spicy-egg-and-cheese-muffin-melts.html
+++ b/recipes/spicy-egg-and-cheese-muffin-melts.html
@@ -8,7 +8,7 @@
   <body>
     <h1>Spicy Egg and Cheese Muffin Melts</h1>
     <img
-      src="/images/spicy-egg-and-cheese-muffin-melts.jpg"
+      src="../images/spicy-egg-and-cheese-muffin-melts.jpg"
       alt="Spicy Egg and Cheese Muffin Melts"
     />
     <p>
